--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -1,82 +1,61 @@
-{%- extends "basic_layout.html" %}
-
-{%- block extrahead %}
-  {{ super() }}
-  <link rel="stylesheet" href="{{ pathto('_static/custom.css', 1) }}" type="text/css" />
-  {% if theme_touch_icon %}
-    <link rel="apple-touch-icon" href="{{ pathto('_static/' ~ theme_touch_icon, 1) }}" />
-  {% endif %}
-  {% if theme_canonical_url %}
-    <link rel="canonical" href="{{ theme_canonical_url }}{{ pagename }}.html"/>
-  {% endif %}
-  <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9" />
-{% endblock %}
-
-{# Disable base theme's top+bottom related navs; we have our own in sidebar #}
-{%- block relbar1 %}{% endblock %}
-{%- block relbar2 %}{% endblock %}
-
-{# Nav should appear before content, not after  #}
-{%- block content %}
-{%- if theme_fixed_sidebar|lower == 'true' %}
-  <div class="document">
-    {{ sidebar() }}
-    {%- block document %}
-      <div class="documentwrapper">
-      {%- if render_sidebar %}
-        <div class="bodywrapper">
-      {%- endif %}
-          <div class="body" role="main">
-            {% block body %} {% endblock %}
-          </div>
-      {%- if render_sidebar %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>sphinx_bulma</title>
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet"
+          href="{{ pathto('_static/sphinx_bulma.css', 1) }}"
+          type="text/css"/>
+    <link rel="stylesheet" href="{{ pathto('_static/custom.css', 1) }}"
+          type="text/css"/>
+</head>
+<body>xx
+<nav class="nav has-shadow" id="top">
+    <div class="container">
+        <div class="nav-left">
+            <a class="nav-item" href="../index.html">
+                <img src="{{ pathto('_static/bulma.png', 1) }}"
+                     alt="Description">
+            </a>
         </div>
-      {%- endif %}
-      </div>
-    {%- endblock %}
-    <div class="clearer"></div>
-  </div>
-{%- else %}
-{{ super() }}
-{%- endif %}
-{%- endblock %}
-
-{%- block footer %}
-    <div class="footer">
-      {% if show_copyright %}&copy;{{ copyright }}.{% endif %}
-      {% if theme_show_powered_by|lower == 'true' %}
-      {% if show_copyright %}|{% endif %}
-      Powered by <a href="http://sphinx-doc.org/">Sphinx {{ sphinx_version }}</a>
-      &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster {{ alabaster_version }}</a>
-      {% endif %}
-      {%- if show_source and has_source and sourcename %}
-      {% if show_copyright or theme_show_powered_by %}|{% endif %}
-      <a href="{{ pathto('_sources/' + sourcename, true)|e }}"
-          rel="nofollow">{{ _('Page source') }}</a>
-      {%- endif %}
+        <span class="nav-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </span>
+        <div class="nav-right nav-menu">
+            <a class="nav-item is-tab is-active">
+                Home
+            </a>
+            <a class="nav-item is-tab">
+                Features
+            </a>
+            <a class="nav-item is-tab">
+                Team
+            </a>
+            <a class="nav-item is-tab">
+                Help
+            </a>
+            <span class="nav-item">
+          <a class="button">
+            Log in
+          </a>
+          <a class="button is-info">
+            Sign up
+          </a>
+        </span>
+        </div>
     </div>
-
-    {% if theme_github_banner|lower != 'false' %}
-    <a href="https://github.com/{{ theme_github_user }}/{{ theme_github_repo }}" class="github">
-        <img style="position: absolute; top: 0; right: 0; border: 0;" src="{{ pathto('_static/' ~ theme_github_banner, 1) if theme_github_banner|lower != 'true' else 'https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png' }}" alt="Fork me on GitHub"  class="github"/>
-    </a>
-    {% endif %}
-
-    {% if theme_analytics_id %}
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', '{{ theme_analytics_id }}']);
-      _gaq.push(['_setDomainName', 'none']);
-      _gaq.push(['_setAllowLinker', true]);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
-    {% endif %}
-{%- endblock %}
+</nav>
+<section class="section">
+    <div class="container content">
+        <p class="has-text-centered">Skeleton template for a basic layout.</p>
+    </div>
+</section>
+{#  <script type="text/javascript" src="../js/bulma.js"></script>#}
+</body>
+</html>
