--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{ pathto('_static/custom.css', 1) }}"
           type="text/css"/>
 </head>
-<body>xx
+<body>
 <nav class="nav has-shadow" id="top">
     <div class="container">
         <div class="nav-left">
