First copy of the Hero HTML. Provide a simple JS file that handles toggling the menu when responsiveness kicks in.

--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -14,48 +14,150 @@
           type="text/css"/>
 </head>
 <body>
-<nav class="nav has-shadow" id="top">
-    <div class="container">
-        <div class="nav-left">
-            <a class="nav-item" href="../index.html">
-                <img src="{{ pathto('_static/bulma.png', 1) }}"
-                     alt="Description">
-            </a>
-        </div>
-        <span class="nav-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
-      </span>
-        <div class="nav-right nav-menu">
-            <a class="nav-item is-tab is-active">
-                Home
-            </a>
-            <a class="nav-item is-tab">
-                Features
-            </a>
-            <a class="nav-item is-tab">
-                Team
-            </a>
-            <a class="nav-item is-tab">
-                Help
-            </a>
-            <span class="nav-item">
-          <a class="button">
-            Log in
-          </a>
-          <a class="button is-info">
-            Sign up
-          </a>
-        </span>
-        </div>
+<section class="hero is-primary is-large header-image">
+    <div class="hero-head">
+        <header class="nav">
+            <div class="container">
+                <div class="nav-left">
+                    <a class="nav-item" href="#">
+                        <img src="{{ pathto('_static/bulma.png', 1) }}"
+                             alt="Logo">
+                    </a>
+                </div>
+                <span class="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+                <div class="nav-right nav-menu">
+                    <a class="nav-item is-active">
+                        Home
+                    </a>
+                    <a class="nav-item">
+                        Examples
+                    </a>
+                    <a class="nav-item">
+                        Documentation
+                    </a>
+                    <span class="nav-item">
+              <a class="button is-info is-outlined is-inverted">
+                <span class="icon">
+                  <i class="fa fa-github"></i>
+                </span>
+                <span>Download</span>
+              </a>
+            </span>
+                </div>
+            </div>
+        </header>
     </div>
-</nav>
-<section class="section">
-    <div class="container content">
-        <p class="has-text-centered">Skeleton template for a basic layout.</p>
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <h1 class="title is-2">
+                Hero Heading
+            </h1>
+            <h2 class="subtitle is-5">
+                A hero description could go here.
+            </h2>
+            <p>
+                <a class="button is-outlined">
+            <span class="icon">
+              <i class="fa fa-download"></i>
+            </span>
+                    <span>
+              Download
+            </span>
+                </a>
+            </p>
+        </div>
     </div>
 </section>
-{#  <script type="text/javascript" src="../js/bulma.js"></script>#}
+<div class="hero-cta">
+    <nav class="level">
+        <div class="level-item has-text-centered">
+            <p class="title">Call to action here! <a class="button is-primary"><span
+                    class="icon"><i class="fa fa-download"></i></span><span>Intent</span></a>
+            </p>
+        </div>
+    </nav>
+</div>
+<div class="section main">
+    <div class="container">
+        <div class="columns">
+            <div class="column is-4">
+                <div class="panel">
+                    <div class="panel-block section">
+                        <p class="has-text-centered"><i
+                                class="fa fa-camera-retro icon-block"></i></p>
+                        <br>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Aenean efficitur sit amet massa fringilla
+                            egestas. Nullam condimentum luctus turpis.</p>
+                        <br>
+                        <p class="has-text-centered"><a
+                                class="button is-info is-outlined">Action</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-4">
+                <div class="panel">
+                    <div class="panel-block section">
+                        <p class="has-text-centered"><i
+                                class="fa fa-bar-chart icon-block"></i></p>
+                        <br>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Aenean efficitur sit amet massa fringilla
+                            egestas. Nullam condimentum luctus turpis.</p>
+                        <br>
+                        <p class="has-text-centered"><a
+                                class="button is-info is-outlined">Action</a>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="column is-4">
+                <div class="panel">
+                    <div class="panel-block section">
+                        <p class="has-text-centered"><i
+                                class="fa fa-cloud icon-block"></i></p>
+                        <br>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Aenean efficitur sit amet massa fringilla
+                            egestas. Nullam condimentum luctus turpis.</p>
+                        <br>
+                        <p class="has-text-centered"><a
+                                class="button is-info is-outlined">Action</a>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<footer class="footer">
+    <div class="container">
+        <div class="content has-text-centered">
+            <p>
+                <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy
+                Thomas</a>. The source code is licensed
+                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
+                The website content
+                is licensed <a
+                    href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC
+                ANS 4.0</a>.
+            </p>
+            <p>
+                <a class="icon" href="https://github.com/jgthms/bulma">
+                    <i class="fa fa-github"></i>
+                </a>
+            </p>
+        </div>
+    </div>
+</footer>
+<script async type="text/javascript"
+        src="{{ pathto('_static/bulma.js', 1) }}"></script>
 </body>
 </html>
