Toolbar is looking ok.

--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>sphinx_bulma</title>
+    <title>sphinx_bulma </title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet"
@@ -40,7 +40,7 @@
                         Documentation
                     </a>
                     <span class="nav-item">
-              <a class="button is-info is-outlined is-inverted">
+              <a class="button is-info is-outlined">
                 <span class="icon">
                   <i class="fa fa-github"></i>
                 </span>
@@ -59,16 +59,6 @@
             <h2 class="subtitle is-5">
                 A hero description could go here.
             </h2>
-            <p>
-                <a class="button is-outlined">
-            <span class="icon">
-              <i class="fa fa-download"></i>
-            </span>
-                    <span>
-              Download
-            </span>
-                </a>
-            </p>
         </div>
     </div>
 </section>
