We are laid out.

--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -62,67 +62,68 @@
         </div>
     </div>
 </section>
-<div class="hero-cta">
-    <nav class="level">
-        <div class="level-item has-text-centered">
-            <p class="title">Call to action here! <a class="button is-primary"><span
-                    class="icon"><i class="fa fa-download"></i></span><span>Intent</span></a>
-            </p>
-        </div>
-    </nav>
-</div>
 <div class="section main">
     <div class="container">
         <div class="columns">
             <div class="column is-4">
-                <div class="panel">
-                    <div class="panel-block section">
-                        <p class="has-text-centered"><i
-                                class="fa fa-camera-retro icon-block"></i></p>
-                        <br>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Aenean efficitur sit amet massa fringilla
-                            egestas. Nullam condimentum luctus turpis.</p>
-                        <br>
-                        <p class="has-text-centered"><a
-                                class="button is-info is-outlined">Action</a>
+                <div class="card section">
+                    <div class="card-image">
+                        <p class="has-text-centered">
+                            <i style="font-size: 5rem"
+                                class="fa fa-camera-retro icon-block"></i>
                         </p>
+                    </div>
+                    <div class="card-content">
+                        <div class="content">
+                            First Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit.
+                            Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+                            <a>#css</a> <a>#responsive</a>
+                            <br>
+                            <small>11:09 PM - 1 Jan 2016</small>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="column is-4">
-                <div class="panel">
-                    <div class="panel-block section">
-                        <p class="has-text-centered"><i
-                                class="fa fa-bar-chart icon-block"></i></p>
-                        <br>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Aenean efficitur sit amet massa fringilla
-                            egestas. Nullam condimentum luctus turpis.</p>
-                        <br>
-                        <p class="has-text-centered"><a
-                                class="button is-info is-outlined">Action</a>
+                <div class="card section">
+                    <div class="card-image">
+                        <p class="has-text-centered">
+                            <i style="font-size: 5rem"
+                                class="fa fa-camera-retro icon-block"></i>
                         </p>
                     </div>
+                    <div class="card-content">
+                        <div class="content">
+                            Second Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit.
+                            Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+                            <a>#css</a> <a>#responsive</a>
+                            <br>
+                            <small>11:09 PM - 1 Jan 2016</small>
+                        </div>
+                    </div>
                 </div>
-
             </div>
             <div class="column is-4">
-                <div class="panel">
-                    <div class="panel-block section">
-                        <p class="has-text-centered"><i
-                                class="fa fa-cloud icon-block"></i></p>
-                        <br>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Aenean efficitur sit amet massa fringilla
-                            egestas. Nullam condimentum luctus turpis.</p>
-                        <br>
-                        <p class="has-text-centered"><a
-                                class="button is-info is-outlined">Action</a>
+                <div class="card section">
+                    <div class="card-image">
+                        <p class="has-text-centered">
+                            <i style="font-size: 5rem"
+                                class="fa fa-camera-retro icon-block"></i>
                         </p>
                     </div>
+                    <div class="card-content">
+                        <div class="content">
+                            Third Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit.
+                            Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+                            <a>#css</a> <a>#responsive</a>
+                            <br>
+                            <small>11:09 PM - 1 Jan 2016</small>
+                        </div>
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
