--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>sphinx_bulma </title>
+    <title>sphinx_bulma</title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet"
@@ -25,28 +25,39 @@
                     </a>
                 </div>
                 <span class="nav-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-          </span>
-                <div class="nav-right nav-menu">
-                    <a class="nav-item is-active">
-                        Home
-                    </a>
-                    <a class="nav-item">
-                        Examples
-                    </a>
-                    <a class="nav-item">
-                        Documentation
-                    </a>
-                    <span class="nav-item">
-              <a class="button is-info is-outlined">
-                <span class="icon">
-                  <i class="fa fa-github"></i>
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </span>
-                <span>Download</span>
-              </a>
-            </span>
+                <div class="nav-right nav-menu" role="navigation"
+                     aria-label="related navigation">
+                    {% set rellinks = [
+                        ('/diary', 'Diary', '', 'The Diary')
+                    ] %}
+                    <a class="nav-item is-active"
+                       href="{{ pathto(master_doc) }}">Home</a>
+                    {%- for rellink in rellinks %}
+                        <a class="nav-item"
+                           href="{{ pathto(rellink[0]) }}"
+                           title="{{ rellink[1]|striptags|e }}"
+                                {{ accesskey(rellink[2]) }}>{{ rellink[3] }}</a>
+                    {%- endfor %}
+                    <span class="nav-item">
+                        <form class="search" action="{{ pathto('search') }}">
+                            <div class="field">
+                              <p id="foo" class="control has-icons-right">
+                                <input class="input" name="q"
+                                       placeholder="Search">
+                                <span class="icon is-small is-right">
+                                  <i class="fa fa-search"></i>
+                                </span>
+                              </p>
+                            </div>
+                          <input type="hidden" name="check_keywords"
+                                 value="yes"/>
+                          <input type="hidden" name="area" value="default"/>
+                        </form>
+                    </span>
                 </div>
             </div>
         </header>
@@ -70,12 +81,13 @@
                     <div class="card-image">
                         <p class="has-text-centered">
                             <i style="font-size: 5rem"
-                                class="fa fa-camera-retro icon-block"></i>
+                               class="fa fa-camera-retro icon-block"></i>
                         </p>
                     </div>
                     <div class="card-content">
                         <div class="content">
-                            First Lorem ipsum dolor sit amet, consectetur adipiscing
+                            First Lorem ipsum dolor sit amet, consectetur
+                            adipiscing
                             elit.
                             Phasellus nec iaculis mauris. <a>@bulmaio</a>.
                             <a>#css</a> <a>#responsive</a>
@@ -90,12 +102,13 @@
                     <div class="card-image">
                         <p class="has-text-centered">
                             <i style="font-size: 5rem"
-                                class="fa fa-camera-retro icon-block"></i>
+                               class="fa fa-camera-retro icon-block"></i>
                         </p>
                     </div>
                     <div class="card-content">
                         <div class="content">
-                            Second Lorem ipsum dolor sit amet, consectetur adipiscing
+                            Second Lorem ipsum dolor sit amet, consectetur
+                            adipiscing
                             elit.
                             Phasellus nec iaculis mauris. <a>@bulmaio</a>.
                             <a>#css</a> <a>#responsive</a>
@@ -110,12 +123,13 @@
                     <div class="card-image">
                         <p class="has-text-centered">
                             <i style="font-size: 5rem"
-                                class="fa fa-camera-retro icon-block"></i>
+                               class="fa fa-camera-retro icon-block"></i>
                         </p>
                     </div>
                     <div class="card-content">
                         <div class="content">
-                            Third Lorem ipsum dolor sit amet, consectetur adipiscing
+                            Third Lorem ipsum dolor sit amet, consectetur
+                            adipiscing
                             elit.
                             Phasellus nec iaculis mauris. <a>@bulmaio</a>.
                             <a>#css</a> <a>#responsive</a>
