--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -7,11 +7,17 @@
     <title>sphinx_bulma</title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ pathto('_static/basic.css', 1) }}" type="text/css">
+    <link rel="stylesheet" href="{{ pathto('_static/pygments.css', 1) }}" type="text/css">
     <link rel="stylesheet"
           href="{{ pathto('_static/sphinx_bulma.css', 1) }}"
           type="text/css"/>
     <link rel="stylesheet" href="{{ pathto('_static/custom.css', 1) }}"
           type="text/css"/>
+    <script src="{{ pathto('_static/jquery.js', 1) }}"></script>
+    <script src="{{ pathto('_static/underscore.js', 1) }}"></script>
+    <script src="{{ pathto('_static/doctools.js', 1) }}"></script>
+    <script src="{{ pathto('_static/searchtools.js', 1) }}"></script>
 </head>
 <body>
 <section
@@ -183,7 +189,16 @@
         </div>
     </div>
 </footer>
-<script async type="text/javascript"
-        src="{{ pathto('_static/bulma.js', 1) }}"></script>
+<script type="text/javascript">
+  var DOCUMENTATION_OPTIONS = {
+    URL_ROOT:    '{{ url_root }}',
+    VERSION:     '{{ release|e }}',
+    COLLAPSE_INDEX: false,
+    FILE_SUFFIX: '{{ '' if no_search_suffix else file_suffix }}',
+    HAS_SOURCE:  {{ has_source|lower }},
+    SOURCELINK_SUFFIX: '{{ sourcelink_suffix }}'
+  };
+</script>
+<script src="{{ pathto('_static/bulma.js', 1) }}"></script>
 </body>
 </html>
