--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -17,6 +17,7 @@
     <script src="{{ pathto('_static/jquery.js', 1) }}"></script>
     <script src="{{ pathto('_static/underscore.js', 1) }}"></script>
     <script src="{{ pathto('_static/doctools.js', 1) }}"></script>
+    <script src="{{ pathto('_static/websupport.js', 1) }}"></script>
     <script src="{{ pathto('_static/searchtools.js', 1) }}"></script>
 </head>
 <body>
