--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -8,15 +8,10 @@
     <title>sphinx_bulma</title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{{ pathto('_static/basic.css', 1) }}"
-          type="text/css">
-    <link rel="stylesheet" href="{{ pathto('_static/pygments.css', 1) }}"
-          type="text/css">
-    <link rel="stylesheet"
-          href="{{ pathto('_static/sphinx_bulma.css', 1) }}"
-          type="text/css"/>
-    <link rel="stylesheet" href="{{ pathto('_static/custom.css', 1) }}"
-          type="text/css"/>
+    <link rel="stylesheet" href="{{ pathto('_static/basic.css', 1) }}">
+    <link rel="stylesheet" href="{{ pathto('_static/pygments.css', 1) }}">
+    <link rel="stylesheet" href="{{ pathto('_static/sphinx_bulma.css', 1) }}">
+    <link rel="stylesheet" href="{{ pathto('_static/custom.css', 1) }}">
     <script src="{{ pathto('_static/jquery.js', 1) }}"></script>
     <script src="{{ pathto('_static/underscore.js', 1) }}"></script>
     <script src="{{ pathto('_static/doctools.js', 1) }}"></script>
