Add a "page" component that is the fallback if there is no sb_type on the page.

--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -33,7 +33,7 @@
                 <div class="nav-right nav-menu" role="navigation"
                      aria-label="related navigation">
                     {% set rellinks = [
-                        ('/diary', 'Diary', '', 'The Diary')
+                        ('diary', 'Diary', '', 'The Diary')
                     ] %}
                     <a class="nav-item is-active"
                        href="{{ pathto(master_doc) }}">Home</a>
