--- a/src/sphinx_bulma/sidenav/sidenav.html
+++ b/src/sphinx_bulma/sidenav/sidenav.html
@@ -1,8 +1,1 @@
-{% macro logo(pathto, logo_url) -%}
-    <div id="sb-logo" class="nav-left">
-        <a class="nav-item" href="#">
-            <img src="{{ pathto(logo_url, 1) }}"
-                 alt="Logo">
-        </a>
-    </div>
-{%- endmacro %}
+<h1>The Sidenav {{ component.sb_type }} and {{ x }}</h1>
