--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <p>
-    {{ site.get_component('sidenav')(x=12) }}
+    {{ sbc['sidenav'](x=42) }}
 </p>
 <section
         class="hero is-primary is-large {{ 'header-image' if pagename == 'index' }}">
