--- a/src/sphinx_bulma/article/article.html
+++ b/src/sphinx_bulma/article/article.html
@@ -1,4 +1,4 @@
-{%- extends resource.sb_layout %}
+{%- extends document.layout %}
 {% block body %}
     <h2>YESS:SLKDJLKJDSF:LKJDSFK</h2>
     {{ body }}
