--- a/src/sphinx_bulma/logo/logo.html
+++ b/src/sphinx_bulma/logo/logo.html
@@ -1,8 +1,5 @@
-{% macro logo(pathto, logo_url) -%}
-    <div id="sb-logo" class="nav-left">
-        <a class="nav-item" href="#">
-            <img src="{{ pathto(logo_url, 1) }}"
-                 alt="Logo">
-        </a>
-    </div>
-{%- endmacro %}
+<div id="sb-logo" class="nav-left">
+    <a class="nav-item" href="#">
+        <img src="{{ logo_url }}" alt="Logo">
+    </a>
+</div>
