--- a/src/sphinx_bulma/layout.html
+++ b/src/sphinx_bulma/layout.html
@@ -18,9 +18,6 @@
     <script src="{{ pathto('_static/searchtools.js', 1) }}"></script>
 </head>
 <body>
-<p>
-    {{ sbc['sidenav'](x=42) }}
-</p>
 <section
         class="hero is-primary is-large {{ 'header-image' if pagename == 'index' }}">
     <div class="hero-head">
@@ -77,47 +74,10 @@
         <div class="container sb-article">
             <div class="columns is-desktop is-1-tablet .ordered-mobile">
                 <div class="column is-2 fl-1">
-                    <div class="content">
-                        <aside class="menu">
-                            <p class="menu-label">
-                                General
-                            </p>
-                            <ul class="menu-list">
-                                <li><a>Dashboard</a></li>
-                                <li><a>Customers</a></li>
-                            </ul>
-                            <p class="menu-label">
-                                Administration
-                            </p>
-                            <ul class="menu-list">
-                                <li><a>Team Settings</a></li>
-                                <li>
-                                    <a class="is-active">Manage Your Team</a>
-                                    <ul>
-                                        <li><a>Members</a></li>
-                                        <li><a>Plugins</a></li>
-                                        <li><a>Add a member</a></li>
-                                    </ul>
-                                </li>
-                                <li><a>Invitations</a></li>
-                                <li><a>Cloud Storage Environment Settings</a>
-                                </li>
-                                <li><a>Authentication</a></li>
-                            </ul>
-                        </aside>
-                    </div>
+                    {{ sbc['sidenav']() }}
                 </div>
                 <div class="column is-10 fl-2">
-                    {% set post = ablog[pagename] %}
-                    <div class="content section sb-body">
-                        <div class="section">
-                            <h2 class="title is-2">{{ title }}</h2>
-                            {% if post.date %}
-                                <h2 class="title is-6">{{ post.date.strftime(gettext(ablog.post_date_format)) }}</h2>
-                            {% endif %}
-                        </div>
-                        {% block body %} {% endblock %}
-                    </div>
+                    {% block body %} {% endblock %}
                 </div>
             </div>
         </div>
